--- a/web/app/ponthe/templates/layout/layout.html
+++ b/web/app/ponthe/templates/layout/layout.html
@@ -7,7 +7,7 @@
     <!--<![endif]-->
     <head>
         <!-- Title -->
-        <title>Ponthe ENPC</title>
+        <title>Ponthé ENPC</title>
         <!-- Meta -->
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="description" content="Galeries Ponthé">
