--- a/web/app/ponthe/templates/archives_annee.html
+++ b/web/app/ponthe/templates/archives_annee.html
@@ -15,12 +15,12 @@
                 <!-- Portfolio Item -->
                 <div class="col-md-3 portfolio-item margin-bottom-40 design">
                     <div>
-                        <a href={{ url_for('private.archives_evenement', year=year_slug, event=event.slug) }} >
+                        <a href="{{ url_for('private.archives_evenement', year=year_slug, event=event.slug) }}">
                             <figure>
-                                <img src="{{ url_for('static', filename='uploads/') }}{{ year }}/{{ event.name }}/{{ filename }}">
+                                <img src="{{ url_for('uploads', filename='{}/{}/{}'.format(year_slug, event.name, filename)) }}">
                                 <figcaption>
                                     <h3 class="margin-top-20">{{ event.name }}</h3>
-                                    <span>Description de l'événement</span>
+                                    <span>{{ event.description }}</span>
                                 </figcaption>
                             </figure>
                         </a>
