--- a/web/app/ponthe/templates/index.html
+++ b/web/app/ponthe/templates/index.html
@@ -69,7 +69,7 @@
                 <!-- //Portfolio Item// -->
                 <!-- Portfolio Item -->
                 <li class="portfolio-item col-sm-6 col-xs-6 padding-20">
-                    <a href={{url_for('private.archives_categorie', category_slug = 'sports')}}>
+                    <a href={{url_for('private.category_gallery', category_slug = 'sports')}}>
                         <figure class="animate fadeInLeft">
                             <img alt="image5" src="static/img/frontpage/pom.jpg">
                             <figcaption>
@@ -82,7 +82,7 @@
                 <!-- //Portfolio Item// -->
                 <!-- Portfolio Item -->
                 <li class="portfolio-item col-sm-6 col-xs-6 padding-20">
-                    <a href={{url_for('private.archives_categorie', category_slug = 'vie-associative')}}>
+                    <a href={{url_for('private.category_gallery', category_slug = 'vie-associative')}}>
                         <figure class="animate fadeInRight">
                             <img alt="image6" src="static/img/frontpage/font2.jpg">
                             <figcaption>
@@ -95,7 +95,7 @@
                 <!-- //Portfolio Item// -->
                 <!-- Portfolio Item -->
                 <li class="portfolio-item col-sm-6 col-xs-6 padding-20">
-                    <a href={{url_for('private.archives_categorie', category_slug = 'voyages')}}>
+                    <a href={{url_for('private.category_gallery', category_slug = 'voyages')}}>
                         <figure class="animate fadeInRight">
                             <img alt="image6" src="static/img/frontpage/dam.jpg">
                             <figcaption>
@@ -108,7 +108,7 @@
                 <!-- //Portfolio Item// -->
                 <!-- Portfolio Item -->
                 <li class="portfolio-item col-sm-6 col-xs-6 padding-20">
-                    <a href={{url_for('private.archives_categorie', category_slug = 'films')}}>
+                    <a href={{url_for('private.category_gallery', category_slug = 'films')}}>
                         <figure class="animate fadeInRight">
                             <img alt="image4" src="static/img/frontpage/voyage1.jpg">
                             <figcaption>
