--- a/web/app/ponthe/templates/year_gallery.html
+++ b/web/app/ponthe/templates/year_gallery.html
@@ -15,7 +15,7 @@
                 <!-- Portfolio Item -->
                 <div class="col-md-3 portfolio-item margin-bottom-40 design">
                     <div>
-                        <a href="{{ url_for('private.archives_evenement', year=year_slug, event=event.slug) }}">
+                        <a href="{{ url_for('private.event_gallery', year_slug=year_slug, event_slug=event.slug) }}">
                             <figure>
                                 <img src="{{ url_for('uploads', filename='{}/{}/{}'.format(year_slug, event.name, filename)) }}">
                                 <figcaption>
