--- a/web/app/ponthe/templates/mail_confirmation.html
+++ b/web/app/ponthe/templates/mail_confirmation.html
@@ -11,7 +11,7 @@
                 <div class="headline">
                     <h2>{{ title }}</h2>
                     <p>
-                        {{ body }}
+                        {{ body | safe }}
                     </p>
                 </div>
             </div>
