add backup container with cron, deploy script, confirmation email template

--- a/web/app/ponthe/templates/layout/layout.html
+++ b/web/app/ponthe/templates/layout/layout.html
@@ -25,9 +25,9 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/responsive.css') }}" rel="stylesheet">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
         <!-- Google Fonts-->
-        <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
-        <link href="http://fonts.googleapis.com/css?family=PT+Sans" type="text/css" rel="stylesheet">
-        <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans" type="text/css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css">
         <link href="https://transloadit.edgly.net/releases/uppy/v0.25.5/dist/uppy.min.css" rel="stylesheet">
     </head>
 
@@ -128,21 +128,21 @@
         <!-- End Footer Menu -->
 
         <!-- JS -->
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/jquery.min.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/bootstrap.min.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/scripts.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/scripts.js') }}"></script>
         <!-- Isotope - Portfolio Sorting -->
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/jquery.isotope.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.isotope.js') }}"></script>
         <!-- Mobile Menu - Slicknav -->
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/jquery.slicknav.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.slicknav.js') }}"></script>
         <!-- Animate on Scroll-->
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/jquery.visible.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.visible.js') }}"></script>
         <!-- Sticky Div -->
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/jquery.sticky.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.sticky.js') }}"></script>
         <!-- Slimbox2-->
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/slimbox2.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/slimbox2.js') }}"></script>
         <!-- Modernizr -->
-        <script type="text/javascript" src="{{ url_for('static', filename = 'js/modernizr.custom.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/modernizr.custom.js') }}"></script>
         <!-- End JS -->
     </body>
 </html>
