--- a/web/app/ponthe/templates/email/register.html
+++ b/web/app/ponthe/templates/email/register.html
@@ -565,9 +565,9 @@
                                   <tr>
                                     <td valign="top" class="mcnTextContent" style="padding-top: 0;padding-right: 18px;padding-bottom: 9px;padding-left: 18px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;word-break: break-word;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: left;">
                                       <p style="margin: 10px 0;padding: 0;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;color: #808080;font-family: Helvetica;font-size: 16px;line-height: 150%;text-align: justify;">
-                                        Bienvenue !<br>
+                                        Bienvenue {{ firstname }} !<br>
                                         <br>
-                                        Clique sur le bouton de confirmation suivant sous 24h pour activer ton compte.
+                                        Clique sur le bouton de confirmation sous 24h pour activer ton compte.
                                       </p>
                                     </td>
                                   </tr>
@@ -581,7 +581,7 @@
                                         <tbody>
                                           <tr>
                                             <td align="center" valign="middle" class="mcnButtonContent" style="font-family: Arial;font-size: 16px;padding: 15px;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
-                                              <a class="mcnButton " title="Confirmer mon compte" href="{{ confirmation_link }}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Confirmer</a>
+                                              <a class="mcnButton " title="Confirmer mon compte" href="{{ register_link }}" target="_blank" style="font-weight: bold;letter-spacing: normal;line-height: 100%;text-align: center;text-decoration: none;color: #FFFFFF;mso-line-height-rule: exactly;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;display: block;">Confirmer</a>
                                             </td>
                                           </tr>
                                         </tbody>
