--- a/web/app/ponthe/templates/layout/layout.html
+++ b/web/app/ponthe/templates/layout/layout.html
@@ -80,7 +80,7 @@
                                     <a href="{{ url_for('private.dashboard') }}" class="fa-copy">Tableau de bord</a>
                                 </li>
                                 <li>
-                                    <a href="{{ url_for('private.membres') }}" class="fa-group">Membres</a>
+                                    <a href="{{ url_for('private.members') }}" class="fa-group">Membres</a>
                                 </li>
                                 <li>
                                     <a href="{{ url_for('private.materiel') }}" class="fa-cogs">Matériel</a>
