--- a/web/app/ponthe/templates/login.html
+++ b/web/app/ponthe/templates/login.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <label class="checkbox">
-                            <input type="checkbox"> Rester connecter
+                            <input type="checkbox"> Rester connecté
                         </label>
                     </div>
                     <div class="col-md-6">
