--- a/web/app/ponthe/templates/category_gallery.html
+++ b/web/app/ponthe/templates/category_gallery.html
@@ -14,15 +14,15 @@
         </div>
         <div class="row">
             <div class="col-md-12 portfolio-group no-padding">
-                {% for event, year_slug, filename in liste_events_annees %}
+                {% for event in category.events %}
                 <!-- Portfolio Item -->
                 <div class="col-md-3 portfolio-item margin-bottom-40 design">
                     <div>
-                        <a href= {{ url_for('private.event_gallery', year_slug=year_slug, event_slug=event.slug) }} >
+                        <a href= {{ url_for('private.event_gallery', event_slug=event.slug) }} >
                             <figure>
-                                <img src="{{ url_for('uploads', filename='{}/{}/{}'.format(year_slug, event.name, filename)) }}">
+                                <img src="{{ url_for('uploads', file_slug=file_slug) }}">
                                 <figcaption>
-                                    <h3 class="margin-top-20">{{ event.name }} - {{ year_slug }}</h3>
+                                    <h3 class="margin-top-20">{{ event.name }}</h3>
                                 </figcaption>
                             </figure>
                         </a>
